syntax = "proto3";

package example;

option go_package="./example";

message Example{
    string stringVal = 1;
    bytes bytesVal = 2;
    message EmbeddedMessage{
        int32 int32Val=1;
        string stringVal=2;
    }
    EmbeddedMessage embeddedExample = 3;
    repeated int32 repeatedInt32Val = 4;
    repeated string repeatedStringVal=5;
    oneof test_oneof{
        string oneof_name = 6;
        EmbeddedMessage oneof_embeddedExample=7;
    }
}